idf_component_register(SRCS "main.c"
                            "ble_spp_server.c"
                            "packet.c"
                            "driver.c"
                            "battery.c"
                            "ledbar.c"
                            "button.c"
                            "crc.c"
                            "buffer.c"
                    INCLUDE_DIRS ".")